# Mardown-to-html

./: CMakeLists.txt  CMakeSettings.json  Makefile  README.md  files_handling.c  files_handling.h  main.c
doc/: HTML_ELTS.md
src/: base.c  base.h  counting_base.c  counting_base.h  elts_type_llist.c  elts_type_llist.h  files_handling.c  files_handling.h  main.c  translation.c  translation.h
src/parsing/: base.c  base.h
src/utils/: custom_strings.c  custom_strings.h  files_utils.c  files_utils.h  utils.h
